...
                Icon(
                    imageVector = icon,
                    contentDescription = null,
                    modifier = Modifier
                        .size(32.dp)
                        .clickable(onClick = onExpandedToggleRequest)
                        .testTag("ExpandableQuoteView.ExpandAction")
                )
            }
            Text(
                text = quote.author,
                style = MaterialTheme.typography.subtitle2,
                textAlign = TextAlign.End,
...
