...
import palbp.laboratory.demos.tictactoe.game.lobby.domain.PlayerInfo
import palbp.laboratory.demos.tictactoe.preferences.domain.UserInfo
import palbp.laboratory.demos.tictactoe.ui.NavigationHandlers
import palbp.laboratory.demos.tictactoe.ui.TopBar
import palbp.laboratory.demos.tictactoe.ui.theme.TicTacToeTheme

const val LobbyScreenTag = "LobbyScreen"

data class LobbyScreenState(
    val players: List<PlayerInfo> = emptyList()
)

@Composable
...
