...
import palbp.laboratory.demos.tictactoe.game.play.domain.Coordinate
import palbp.laboratory.demos.tictactoe.game.play.domain.Game
import palbp.laboratory.demos.tictactoe.game.play.domain.Marker
import palbp.laboratory.demos.tictactoe.ui.TopBar
import palbp.laboratory.demos.tictactoe.ui.theme.TicTacToeTheme

internal const val GameScreenTag = "GameScreen"
internal const val GameScreenTitleTag = "GameScreenTitle"
internal const val ForfeitButtonTag = "ForfeitButton"

data class GameScreenState(
    @StringRes val title: Int?,
    val game: Game
...
